--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "keywords": [
     "interlace",
+    "string",
     "strings"
   ],
   "author": "Pierre-Emmanuel Lévesque <pierre.e.levesque@gmail.com>",
